Moved components to wwwroot > js

--- a/MasterCatalog.Web/Views/Company/Catalog.cshtml
+++ b/MasterCatalog.Web/Views/Company/Catalog.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section Scripts {
-    <script src="~/Views/Company/Catalog.cshtml.js" asp-append-version="true" type="module"></script>
+    <script src="~/js/components/company/Catalog.js" asp-append-version="true" type="module"></script>
 }
 
 <div id="content">
