--- a/MasterCatalog.Web/Views/Company/Index.cshtml
+++ b/MasterCatalog.Web/Views/Company/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 @section Scripts {
-    <script src="~/Views/Company/Index.cshtml.js" asp-append-version="true" type="module"></script>
+    <script src="~/js/components/company/Index.js" asp-append-version="true" type="module"></script>
 }
 
 <div id="content">
