--- a/MasterCatalog.Web/Views/Items/List.cshtml
+++ b/MasterCatalog.Web/Views/Items/List.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section Scripts {
-    <script src="~/Views/Items/List.cshtml.js" asp-append-version="true" type="module"></script>
+    <script src="~/js/components/items/List.js" asp-append-version="true" type="module"></script>
 }
 
 <div id="content">
