--- a/MasterCatalog.Web/Views/Recipe/Index.cshtml
+++ b/MasterCatalog.Web/Views/Recipe/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section Scripts {
-    <script src="~/Views/Recipe/Index.cshtml.js" asp-append-version="true" type="module"></script>
+    <script src="~/js/components/recipe/Index.js" asp-append-version="true" type="module"></script>
 }
 
 <div id="content">
