--- a/MasterCatalog.Web/Views/UnitOfMeasure/Index.cshtml
+++ b/MasterCatalog.Web/Views/UnitOfMeasure/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 @section Scripts {
-    <script src="~/Views/UnitOfMeasure/Index.cshtml.js" asp-append-version="true" type="module"></script>
+    <script src="~/js/components/unitOfMeasure/Index.js" asp-append-version="true" type="module"></script>
 }
 
 <div id="content">
