--- a/MasterCatalog.Web/Views/Shared/_SideMenu.cshtml
+++ b/MasterCatalog.Web/Views/Shared/_SideMenu.cshtml
@@ -3,14 +3,16 @@
     string activePage = ViewContext.RouteData.Values["controller"].ToString().ToLower() + "/" + ViewContext.RouteData.Values["action"].ToString().ToLower();
 }
 
-<div id="sideMenu" class="p-3">
-    <h5 class="text-primary p-3 pt-0">Menu</h5>
+<div id="sideMenu" class="p-3 pt-0">
     <ul class="list-unstyled">
         <li class="p-2 ps-3 @(activePage.StartsWith("items") ? "link-active" : string.Empty)">
             <a class="link-dark link-opacity-75-hover link-offset-2 link-underline link-underline-opacity-0" asp-controller="Items" asp-action="List">Items</a>
         </li>
         <li class="p-2 ps-3 @(activePage == "itemattribute/index" ? "link-active" : string.Empty)">
-            <a class="link-dark link-opacity-75-hover link-offset-2 link-underline link-underline-opacity-0" asp-controller="ItemAttribute" asp-action="Index">Item Attributes</a>
+            <a class="link-dark link-opacity-75-hover link-offset-2 link-underline link-underline-opacity-0" asp-controller="ItemAttribute" asp-action="Index">Attributes</a>
+        </li>
+        <li class="p-2 ps-3 @(activePage == "categories/index" ? "link-active" : string.Empty)">
+            <a class="link-dark link-opacity-75-hover link-offset-2 link-underline link-underline-opacity-0" asp-controller="Categories" asp-action="Index">Categories</a>
         </li>
         <li class="p-2 ps-3 @(activePage == "unitofmeasure/index" ? "link-active" : string.Empty)">
             <a class="link-dark link-opacity-75-hover link-offset-2 link-underline link-underline-opacity-0" asp-controller="UnitOfMeasure" asp-action="Index">Units of Measure</a>
