--- a/MasterCatalog.Web/Views/Items/Index.cshtml
+++ b/MasterCatalog.Web/Views/Items/Index.cshtml
@@ -13,9 +13,8 @@
         <message-center ref="messageCenter"></message-center>
 
         <div class="col-9">
-            <item-details 
-                :item="model" 
-                :loading="loading">
+            <item-details :item="model"
+                          :loading="loading">
             </item-details>
         </div>
         <div class="col-3">
